fix scrollbars

--- a/source/styles/explore.css
+++ b/source/styles/explore.css
@@ -8,7 +8,7 @@ body {
   border-radius: 12px;
 }
 ::-webkit-scrollbar-track {
-  background: white;
+  background: var(--purple-gray);;
   border-radius: 12px;
 }
 ::-webkit-scrollbar-thumb {
